--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <!-- testimonials -->
 
                     <section class="testimonials">
-                        <h3 class="h3 testimonials-title">Testimonials</h3>
+                        <h3 class="h3 testimonials-title">With Me</h3>
                         <ul class="testimonials-list has-scrollbar">
                             <li class="testimonials-items">
                                 <a href="#" class="content-card">
@@ -243,7 +243,7 @@
 
             <!-- resume -->
 
-            <article class="resume active" id="resume">
+            <article class="resume active" id="about>
                 <header>
                     <h2 class="h2 article-title">
                         Resume
