--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
             <!-- resume -->
 
-            <article class="resume active" id="about>
+            <article class="resume active" id="resume">
                 <header>
                     <h2 class="h2 article-title">
                         Resume
