--- a/resume.html
+++ b/resume.html
@@ -130,10 +130,10 @@
              <nav class="navbar">
                  <ul class="nav-list">
                      <li class="nav-item">
-                         <button class="nav-link active" data-nav-link> <a href="./index.html">About</a> </button>
+                         <button class="nav-link" data-nav-link> <a href="./index.html">About</a> </button>
                      </li>  
                      <li class="nav-item">
-                        <button class="nav-link" data-nav-link> <a href="./resume.html">Resume</a> </button>
+                        <button class="nav-link active" data-nav-link> <a href="./resume.html">Resume</a> </button>
                     </li>  
                      <li class="nav-item">
                          <button class="nav-link" data-nav-link> <a href="./contact.html">Contact</a> </button>
@@ -141,105 +141,92 @@
                 </ul>
              </nav>
 
-            <!-- about -->
 
-            <article class="about active" id="about">
+            <!-- resume -->
+
+            <article class="resume active" id="resume">
                 <header>
                     <h2 class="h2 article-title">
-                        About me
+                        Resume
                     </h2>
                 </header>
-                    <section class="about-text">
-                        <p>
-                            I'm a Web Develpoer from Kathmandu, Nepal. I enjoy making creative websites .
-                        </p>
-                        <p>
-                            My job is to build Web sites that is functional and user friendly but at the same time attractive.
-                            Moreover I like to add a personal touch to your websites and also make sure that it is attractive and easy to use.
-                        </p>
-                    </section>
 
-                    <!-- servies -->
+                <!-- timeline -->
+                <section class="timeline">
+                    <div class="title-wrapper">
+                        <div class="icon-box">
+                            <ion-icon name="book-outline"></ion-icon>
+                        </div>
+                        <h3 class="h3">Education</h3>
+                    </div>
 
-                    <section class="services">
-                        <h3 class="h3 service-title">
-                            What i'm doing
-                        </h3>
-                        <ul class="service-list">
-                            <li class="service-item">
+                    <ol class="timeline-list">
+                        <li class="timeline-item">
+                            <h4 class="h4 timeline-item-title">Hillary High School</h4>
+                            <span>2003-2016</span>
+                            <p class="timeline-text">
+                                Completed my Primary Level education in this school located at Gaurinagar, Kathmandu.
+                            </p>
+                        </li>
 
-                                <div class="service-icon">
-                                    <img src="./assets/images/icon-design.svg" alt="design" width="50">
-                                </div>
-                                <div class="service-content">
-                                    <h4 class="h4 service-title">Web Design</h4>
-                                    <p class="service-text">
-                                        Modern and high-quality design made at a professional level.
-                                    </p>
-                                </div>
+                        <li class="timeline-item">
+                            <h4 class="h4 timeline-item-title">Riviera International Academy</h4>
+                            <span>2016-2018</span>
+                            <p class="timeline-text">
+                                Completed my Secondary Level education in this academy located at Maijubahal, Kathmandu.
+                            </p>
+                        </li>
 
-                            </li>
+                        <li class="timeline-item">
+                            <h4 class="h4 timeline-item-title">Ambition International Academy</h4>
+                            <span>2019-Present</span>
+                            <p class="timeline-text">
+                                Currently I'm completing Bachelors Level study at Ambition International Academy.
+                            </p>
+                        </li>
+                    </ol>
 
-                            <li class="service-item">
+                </section>
 
-                                <div class="service-icon">
-                                    <img src="./assets/images/icon-dev.svg" alt="development" width="50">
-                                </div>
-                                <div class="service-content">
-                                    <h4 class="h4 service-title">Web Develpoment</h4>
-                                    <p class="service-text">
-                                        Sites are developed at professional level in high-quality.
-                                    </p>
-                                </div>
 
-                            </li>
+                <!-- skills -->
+                <section class="skills">
+                    <h2 class="h2 skills-title">My Skills</h2>
+                    <ul class="skill-list content-card">
+                        <li class="skills-item">
+                            <div class="title-wrapper">
+                                <h5 class="h5">HTML</h5>
+                                <data value="80">80%</data>
+                            </div>
+                            <div class="skills-progress-bg">
+                                <div class="skills-progress-fill" style="width: 80%;"></div>
+                            </div>
+                        </li>
 
-                        </ul>
-                    </section>
+                        <li class="skills-item">
+                            <div class="title-wrapper">
+                                <h5 class="h5">CSS</h5>
+                                <data value="80">60%</data>
+                            </div>
+                            <div class="skills-progress-bg">
+                                <div class="skills-progress-fill" style="width: 60%;"></div>
+                            </div>
+                        </li>
 
-                    <!-- testimonials -->
+                        <li class="skills-item">
+                            <div class="title-wrapper">
+                                <h5 class="h5">Java Script</h5>
+                                <data value="80">40%</data>
+                            </div>
+                            <div class="skills-progress-bg">
+                                <div class="skills-progress-fill" style="width: 40%;"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
 
-                    <section class="testimonials">
-                        <h3 class="h3 testimonials-title">With Me</h3>
-                        <ul class="testimonials-list has-scrollbar">
-                            <li class="testimonials-items">
-                                <a href="#" class="content-card">
-                                    <figure class="testimonials-avatar-box">
-                                        <img src="./assets/images/ganesh.jpg" alt="ganesh" width="80">
-                                    </figure>
-
-                                    <h4 class="h4 testimonials-item-title">
-                                        Ganesh Bahadur Kawar
-                                    </h4>
-
-                                    <div class="testimonials-text">
-                                        <p>
-                                            Ganesh is a talented web developer with very pleasing works and a lot of experience. He is very concerned about the needs of the clients and delivered very good perofrmance. He is very enthusiastic about his work and always tries to give his best in what he does.
-                                        </p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="testimonials-items">
-                                <a href="#" class="content-card">
-                                    <figure class="testimonials-avatar-box">
-                                        <img src="./assets/images/srijan.jpg" alt="ganesh" width="80">
-                                    </figure>
-
-                                    <h4 class="h4 testimonials-item-title">
-                                        Srijan Sigdel
-                                    </h4>
-
-                                    <div class="testimonials-text">
-                                        <p>
-                                            Srijan is a talented designer and photoshop expert with very pleasing works and a lot of experience. He is very concerned about the needs of the clients and delivered very good perofrmance. He is always eager to try and make new and good looking designs.
-                                        </p>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </section>
             </article>
+
 
         </div>
 
